# ibtmpl

./: .dockerignore  .env  .gitlab-ci.yml  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  README.rst  pyproject.toml  remove_pkg.sh  requirements.txt  setup.cfg  setup.py  test_push.txt
configs/: default.yaml
configs/clickhouse/: prod.yaml
configs/duckdb/: default.yaml
configs/hydra/: default.yaml
configs/kafka/: default.yaml  inboc.yaml
configs/minio/: inboc.yaml
configs/mlflow/: inboc.yaml
configs/paths/: default.yaml
configs/pipelines/: default.yaml
configs/postgres/: dev.yaml  prod.yaml
configs/projects/: default.yaml
configs/ray/: default.yaml  inboc.yaml
configs/redis/: default.yaml  inboc.yaml
configs/vault/: inboc.yaml
ibtmpl/: pipline_example.py
tests/: __init__.py
