[tool.poetry]
name = "ibtmpl"
version = '0.2.2dev0'
description = "inboc"
authors = ["inboc-dev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.base-tools.dependencies]
pip = "^23.3.1"
wheel = "^0.41.3"
bump2version = "^1.0.1"
watchdog = "^3.0.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
sphinx = "^7.2.6"
twine = "^4.0.2"
click = "^8.1.7"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyrootutils = "^1.0.4"
pre-commit = "^3.5.0"
psutil = "^5.9.6"
requests = "^2.31.0"
mock = "4.0.3"



[[tool.poetry.source]]
name = "inboc_nexus"
url = "https://nexus.inboc.net/repository/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "inboc-gitlab"
url = "https://gitlab.inboc.net/api/v4/projects/93/packages/pypi/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "inboc-gitlab-util"
url = "https://gitlab.inboc.net/api/v4/projects/89/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
